--- a/www/apps/resources/app/integrations/guides/shipstation/page.mdx
+++ b/www/apps/resources/app/integrations/guides/shipstation/page.mdx
@@ -229,9 +229,9 @@ export class ShipStationClient {
       ...data,
       headers: {
         ...data?.headers,
-        'api-key': this.options.api_key,
-        "Content-Type": "application/"
-      }
+        "api-key": this.options.api_key,
+        "Content-Type": "application/",
+      },
     }).then((resp) => resp.json())
   }
 }
@@ -331,7 +331,7 @@ export const clientHighlights2 = [
 ```ts title="src/modules/shipstation/client.ts" highlights={clientHighlights2}
 // other imports...
 import { 
-  CarriersResponse
+  CarriersResponse,
 } from "./types"
 
 export class ShipStationClient {
@@ -357,7 +357,7 @@ export const serviceHighlights3 = [
 ```ts title="src/modules/shipstation/service.ts" highlights={serviceHighlights3}
 // other imports...
 import { 
-  FulfillmentOption
+  FulfillmentOption,
 } from "@medusajs/framework/types"
 
 class ShipStationProviderService extends AbstractFulfillmentProviderService {
@@ -372,7 +372,7 @@ class ShipStationProviderService extends AbstractFulfillmentProviderService {
         carrier.services.forEach((service) => {
           fulfillmentOptions.push({
             id: carrier.carrier_id,
-            carrier_service_code: service.service_code
+            carrier_service_code: service.service_code,
           })
         })
       })
@@ -547,8 +547,8 @@ Next, add to `ShipStationClient` a method that sends a request to [ShipStation's
 import { 
   // ...
   GetShippingRatesRequest,
-  GetShippingRatesResponse
-} from "./types";
+  GetShippingRatesResponse,
+} from "./types"
 
 export class ShipStationClient {
   // ...
@@ -556,7 +556,7 @@ export class ShipStationClient {
     data: GetShippingRatesRequest
   ): Promise<GetShippingRatesResponse> {
     return await this.sendRequest("/rates", {
-      body: JSON.stringify(data)
+      body: JSON.stringify(data),
     })
   }
 }
@@ -598,19 +598,19 @@ class ShipStationProviderService extends AbstractFulfillmentProviderService {
         // @ts-ignore
         ship_to,
         // @ts-ignore
-        ship_from
+        ship_from,
       },
       rate_options: {
         carrier_ids: [carrier_id],
         service_codes: [carrier_service_code],
         // TODO check if this is correct
-        preferred_currency: context.currency_code as string
-      }
+        preferred_currency: context.currency_code as string,
+      },
     })
 
     return {
       ...data,
-      shipment_id
+      shipment_id,
     }
   }
 }
@@ -638,8 +638,8 @@ So, start by adding a method in `ShipStationClient` to send the request:
 // other imports...
 import { 
   // ...
-  RateResponse
-} from "./types";
+  RateResponse,
+} from "./types"
 
 export class ShipStationClient {
   // ...
@@ -664,7 +664,7 @@ export const serviceHighlights5 = [
 // other imports...
 import { 
   // ...
-  CalculatedShippingOptionPrice
+  CalculatedShippingOptionPrice,
 } from "@medusajs/framework/types"
 
 class ShipStationProviderService extends AbstractFulfillmentProviderService {
@@ -686,7 +686,7 @@ class ShipStationProviderService extends AbstractFulfillmentProviderService {
 
     return {
       calculated_price: calculatedPrice,
-      is_calculated_price_tax_inclusive: !!rate.tax_amount
+      is_calculated_price_tax_inclusive: !!rate.tax_amount,
     }
   }
 }
@@ -782,8 +782,8 @@ import {
   // ...
   Shipment,
   PurchaseLabelRequest,
-  Label
-} from "./types";
+  Label,
+} from "./types"
 
 export class ShipStationClient {
   // ...
@@ -794,7 +794,7 @@ export class ShipStationClient {
   async purchaseLabel(data: PurchaseLabelRequest): Promise<Label> {
     return await this.sendRequest(`/labels`, {
       method: "POST",
-      body: JSON.stringify(data)
+      body: JSON.stringify(data),
     })
   }
 }
@@ -842,15 +842,15 @@ class ShipStationProviderService extends AbstractFulfillmentProviderService {
           // @ts-ignore
           sku: item.sku,
           // @ts-ignore
-          quantity: item.quantity
-        }))
+          quantity: item.quantity,
+        })),
       },
       outbound_label_id: shipment.shipment_id,
     })
 
     return {
       label_id: label.label_id,
-      shipment_id: label.shipment_id
+      shipment_id: label.shipment_id,
     }
   }
 }
@@ -896,20 +896,20 @@ export const clientHighlights4 = [
 // other imports...
 import { 
   // ...
-  VoidLabelResponse
-} from "./types";
+  VoidLabelResponse,
+} from "./types"
 
 export class ShipStationClient {
   // ...
   async voidLabel(id: string): Promise<VoidLabelResponse> {
     return await this.sendRequest(`/labels/${id}/void`, {
-      method: "PUT"
+      method: "PUT",
     })
   }
 
   async cancelShipment(id: string): Promise<void> {
     return await this.sendRequest(`/shipments/${id}/cancel`, {
-      method: "PUT"
+      method: "PUT",
     })
   }
 }
@@ -961,7 +961,7 @@ Create the file `src/modules/shipstation/index.ts` with the following content:
 import ShipStationProviderService from "./service"
 import { 
   ModuleProvider, 
-  Modules
+  Modules,
 } from "@medusajs/framework/utils"
 
 export default ModuleProvider(Modules.FULFILLMENT, {
@@ -997,7 +997,7 @@ module.exports = defineConfig({
             id: "shipstation",
             options: {
               api_key: process.env.SHIPSTATION_API_KEY,
-              sandbox: process.env.SHIPSTATION_SANDBOX === "true"
+              sandbox: process.env.SHIPSTATION_SANDBOX === "true",
             },
           },
         ],
