docs: how to add new admin route under existing route

--- a/www/apps/book/app/learn/fundamentals/admin/ui-routes/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/admin/ui-routes/page.mdx
@@ -145,6 +145,32 @@ Some caveats for nested UI routes in the sidebar:
 - Nested routes in setting pages aren't shown in the sidebar to follow the admin's design conventions.
 - The `icon` configuration is ignored for the sidebar item of nested UI route to follow the admin's design conventions.
 
+
+### Route Under Existing Admin Route
+You can locate a route under an existing route. For example, you can locate a route under the orders route in the sidebar.
+
+```tsx title="src/admin/routes/orders/nested/page.tsx"
+import { defineRouteConfig } from "@medusajs/admin-sdk"
+import { Container, Heading } from "@medusajs/ui"
+
+const NestedOrdersPage = () => {
+  return (
+    <Container className="divide-y p-0">
+      <div className="flex items-center justify-between px-6 py-4">
+        <Heading level="h1">Nested Orders Page</Heading>
+      </div>
+    </Container>
+  )
+}
+
+export const config = defineRouteConfig({
+  label: "Nested Orders",
+  nested: "/orders",
+})
+
+export default NestedOrdersPage
+```
+
 ---
 
 ## Create Settings Page
